[package]
name = "mega-download"
version = "0.1.0"
edition = "2024"
description = "A small Rust CLI for downloading all files from a public MEGA folder."
repository = "https://github.com/11philip22/mega-download"
license = "MIT"
keywords = ["mega", "download", "cli", "filesystem", "public-folder"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
megalib = { version = "0.11.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
